Tue Aug 30 11:25:21 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/json: Merge json gem 1.5.4+ (2149f4185c598fb97db1).
	  [Bug #5173] [ruby-core:38866]

Tue Aug 30 09:53:59 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* cont.c (fiber_entry): fix stack allocation failure on Debian
	  GNU/kFreeBSD.
	  Patch by Lucas Nussbaum <lucas at lucas-nussbaum dot net>.
	  [Bug #5241] [ruby-core:39147]

Tue Aug 30 09:52:29 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* backport r33117 from trunk.
	
	* thread.c (rb_thread_select): rewrite by using
	  rb_thread_fd_select(). old one is EINTR unsafe.
	  Patch by Eric Wong. [Bug #5229] [ruby-core:39102]
	
	* test/-ext-/old_thread_select/test_old_thread_select.rb:
	  a testcase for rb_thread_select().
	* ext/-test-/old_thread_select/old_thread_select.c: ditto.
	* ext/-test-/old_thread_select/depend: ditto.
	* ext/-test-/old_thread_select/extconf.rb: ditto.

Tue Aug 30 09:16:17 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* configure.in: fix a build failure on GNU Hurd.
	  Patch by Samuel Thibault <sthibault at debian dot org>. Thank you!
	  [Bug #5250] [ruby-core:39185]

Sun Aug 28 15:38:17 2011  CHIKANAGA Tomoyuki  <nagachika00@gmail.com>

	* backport r33106 from trunk.

	* ext/date/date_parse.c (date_zone_to_diff): keep a temporary string
	  stored in variable while the contents buffer is beeing used.

	* ext/date/date_parse.c (date_zone_to_diff): get rid of out of bounds
	  memory read. [ruby-dev:44409] [Bug #5213]

Sun Aug 28 05:29:50 2011  Ryan Davis  <ryand-ruby@zenspider.com>

	* backport r33102 from trunk.

	* lib/minitest/*: Imported minitest 2.5.1 (r6596)
	* test/minitest/*: ditto

Sat Aug 27 20:54:54 2011  Kazuki Tsujimoto  <kazuki@callcc.net>

	* backport r33099 from trunk.

	* vm.c (rb_vm_rewrite_dfp_in_errinfo): change return type
	  to suppress a warning.

	* vm_core.h: ditto.

Sat Aug 27 19:03:44 2011  Kazuki Tsujimoto  <kazuki@callcc.net>

	* backport r33096 from trunk.
