@@ -1,3 +1,14 @@
+Wed Aug 31 05:26:30 2011  NAKAMURA Usaku  <usa@ruby-lang.org>
+
+	* win32/win32.c, include/ruby/intern.h (rb_w32_fd_copy): implement
+	  for rb_thread_select() in thread.c.  the use of rb_fd_copy() is
+	  introduced in r33117.
+	  [Bug #5229] [ruby-core:39102]
+
+	* thread.c (rb_thread_select): must call rb_fd_init() before using
+	  rb_fdset_t.  see the implementations of rb_fd_init()s if you want to
+	  know the reason.
+
 Tue Aug 30 11:25:21 2011  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* ext/json: Merge json gem 1.5.4+ (2149f4185c598fb97db1).
